[package]
name = "simtricks"
version = "0.2.2-alpha.1"
edition = "2021"
authors = ["Will McGloughlin <willem.mcg@gmail.com>"]
license = "MIT"
description = "A tool to run Matricks plugins on non-Raspberry Pi devices"
readme = "README.md"
homepage = "https://github.com/wymcg/simtricks"
repository = "https://github.com/wymcg/simtricks"
keywords = ["ws281x", "raspberrypi", "wasm"]
categories = ["development-tools"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
extism = "0.5.2"
eframe = "0.23.0"
matricks_plugin = "0.1.4"
rfd = "0.12.0"
serde = "1.0.181"
serde_json = "1.0.104"
chrono = "0.4.26"