[package]
name = "simtricks"
version = "0.3.0-alpha-2"
edition = "2021"
authors = ["Will McGloughlin <willem.mcg@gmail.com>"]
license = "MIT"
description = "A tool to run Matricks plugins on non-Raspberry Pi devices"
readme = "README.md"
homepage = "https://github.com/wymcg/simtricks"
repository = "https://github.com/wymcg/simtricks"
keywords = ["ws281x", "raspberrypi", "wasm"]
categories = ["development-tools"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
extism = "0.5.2"
eframe = "0.23.0"
egui_extras = { version = "0.23.0", features = ["image"] }
image = { version = "0.24.7", features = ["png"] }
serde = "1.0.189"
serde_json = "1.0.107"
simple_logger = "4.2.0"
log = "0.4.20"
clap = { version = "4.4.6", features = ["derive"] }